# garmin_import

./: CMakeLists.txt  README.md  example.ttbin  gulpfile.js  import.py  test.tcx  tt_export.cc  ttbin.pyd
libusb/include/libusb-1.0/: libusb.h
protobuf-c/: protobuf-c.c  protobuf-c.h  protobuf-c.lib
pybind11/: .appveyor.yml  .travis.yml  CMakeLists.txt  setup.py
pybind11/docs/: conf.py
pybind11/include/pybind11/: attr.h  buffer_info.h  cast.h  chrono.h  complex.h  eigen.h  embed.h  eval.h  functional.h  iostream.h  numpy.h  operators.h  options.h  pybind11.h  pytypes.h  stl.h  stl_bind.h
pybind11/include/pybind11/detail/: class.h  common.h  descr.h  init.h  internals.h  typeid.h
pybind11/pybind11/: __init__.py
pybind11/tests/: CMakeLists.txt  conftest.py  constructor_stats.h  local_bindings.h  object.h  pybind11_cross_module_tests.cpp  pybind11_tests.cpp  pybind11_tests.h  test_buffers.cpp  test_buffers.py  test_builtin_casters.cpp  test_builtin_casters.py  test_call_policies.cpp  test_callbacks.cpp  test_chrono.cpp  test_class.cpp  test_class.py  test_constants_and_functions.cpp  test_copy_move.cpp  test_docstring_options.cpp  test_eigen.cpp  test_eigen.py  test_enum.cpp  test_enum.py  test_eval.cpp  test_exceptions.cpp  test_factory_constructors.cpp  test_gil_scoped.cpp  test_gil_scoped.py  test_iostream.cpp  test_kwargs_and_defaults.cpp  test_kwargs_and_defaults.py  test_local_bindings.cpp  test_methods_and_attributes.cpp  test_methods_and_attributes.py  test_modules.cpp  test_multiple_inheritance.cpp  test_numpy_array.cpp  test_numpy_array.py  test_numpy_dtypes.cpp  (+13 more)
pybind11/tests/test_cmake_build/: embed.cpp  main.cpp
pybind11/tests/test_embed/: catch.cpp  external_module.cpp  test_interpreter.cpp
pybind11/tools/: FindPythonLibsNew.cmake  pybind11Tools.cmake
ttwatch-master/: CMakeLists.txt  findLibUSB.cmake
ttwatch-master/include/: cycling_cadence.h  download.h  export.h  json.h  libttwatch.h  libttwatch.hpp  log.h  options.h  protobuf.h  ttbin.h
ttwatch-master/manifest/: manifest_definitions.h  manifest_definitions_00010113.h  manifest_definitions_0001031b.h  manifest_definitions_0001073e.h  manifest_definitions_0001082e.h
ttwatch-master/src/: cycling_cadence.c  download.c  export.c  export_csv.c  export_gpx.c  export_kml.c  export_tcx.c  firmware.c  get_activities.c  json.c  libttwatch.cpp  libttwatch_cpp.cpp  log.c  misc.c  options.c  protobuf.c  set_time.c  ttbin.c  ttbincnv.c  ttbinmod.c  ttwatch.c  ttwatchd.c  update_gps.c
ttwatch-master/src/protobuf/: activity_tracking.pb-c.c  activity_tracking.pb-c.h
